fixing up timeline on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -361,7 +361,6 @@ table.hoverable > tbody > tr:hover {
 @media screen and (max-width:660px) {
 .timeline {
     width: 100%;
-    padding: 0 0 1em;
     z-index: 8;
 }
 .direction-l, .direction-r {
